--- a/package.xml
+++ b/package.xml
@@ -14,12 +14,15 @@
   <build_depend>fcu_common</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>dynamic_reconfigure</build_depend>
 
   <run_depend>sensor_msgs</run_depend>
   <run_depend>nav_msgs</run_depend>
   <run_depend>fcu_common</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
+  <run_depend>dynamic_reconfigure</run_depend>
+
 
 
 
