worked on forward velocity choice, but it sucks.  will have to work on it later

--- a/cfg/Planner.cfg
+++ b/cfg/Planner.cfg
@@ -24,6 +24,16 @@ repulse.add("ko1", double_t, 0, "repulse_theta_gain", 46.0, 0, 50.0)
 repulse.add("ko2", double_t, 0, "repulse phi gain", 0.1, 0, 50.0)
 
 forward = gen.add_group("Forward")
-forward.add("v0", double_t, 0, "nominal forward speed", 4.0, 0, 40)
+forward.add("v0", double_t, 0, "nominal forward speed", 5.2, 0, 40)
+forward.add("k_speed", double_t, 0, "gain on speed", 0.05, 0, 1.0)
+forward.add("horizontal_search", double_t, 0, "horizontal range to search (rad)", 10.0*3.14519/180.0, 0, 3.14159/2.0)
+forward.add("vertical_search", double_t, 0, "vertical range to search (rad)", 10.0*3.14519/180.0, 0, 3.14159/2.0)
+
+horizontal = gen.add_group("horizontal")
+horizontal.add("k_strafe", double_t, 0, "gain on strafing", 0.1667, 0, 1.0)
+horizontal.add("max_strafe", double_t, 0, "max strafing speed (m/s)", 8.0, 0, 20.0)
+
+yaw = gen.add_group("yaw")
+yaw.add("max_yaw_rate", double_t, 0, "max commanded yaw rate (rad/s)", 6.4, 0, 20)
 
 exit(gen.generate(PACKAGE, "reactive_planner", "Planner"))
